Mon Nov  1 14:57:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_NS_sys_mman.inl:

          For 64-bit Windows, pass the high 32 bits of ACE_OS::mmap()'s "len"
          parameter as the 3rd parameter to CreateFileMapping(), which was
          previously hard-coded to zero.  This both avoids a warning and also
          enables the user to pass a value > MAX_INT as the maximum size.

Mon Nov  1 07:18:43 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Reverted some of changes in previous commit which
          were accidentally cheked in.

Sun Oct 31 10:14:10 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Removed some legacy GLIBC 1.x related settings.

Sat Oct 30 10:09:47 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Removed some legacy settings.

Fri Oct 29 14:33:33 UTC 2010  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_g++_common.GNU:
          Removed GCC 2.x support.

Thu Oct 28 17:45:10 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/INET_Addr.cpp (set): Corrected ACE_HAS_IPV6 checks made in
          Wed Oct 27 22:16:12 UTC 2010  Steve Huston  <shuston@riverace.com>.

Thu Oct 28 11:40:01 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/make_release.py:
          Fixed incorrect spelling of DANCE.

Thu Oct 28 11:18:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Fixed generation of dsc file

Thu Oct 28 07:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Array_Map.h:
        * ace/Array_Map.cpp:
        * ace/Auto_Functor.h:
        * ace/Auto_Functor.inl:
        * ace/Value_Ptr.h:
        * ace/config-g++-common.h:
        * ace/config-win32-msvc-8.h:
        * performance-tests/Misc/test_singleton.cpp:
          Cleanup because GCC < 3 isn't supported anymore

        * include/makeinclude/platform_hpux_aCC.GNU: